# SmartBench

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.txt
smartbench/: __init__.py  cli.py
smartbench/detector/: __init__.py  fingerprint.py  scanner.py
smartbench/diagnostics/: __init__.py  registry.py  tools.py
smartbench/engine/: debate.py
smartbench/graph/: __init__.py  builder.py  retriever.py  schema.py
smartbench/prompts/: __init__.py  factory.py  templates.py
smartbench/rag/: __init__.py  chunker.py  embedder.py  indexer.py  retriever.py  store.py
smartbench/verifier/: __init__.py  cross_checker.py  extractor.py  location.py  scorer.py  verifier.py
tests/: e2e_simulation.py
